# daily-digest

./: .env.example  .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/daily_digest/: config.py  enum.py  main.py  models.py
src/daily_digest/connectors/: gitlab.py  redmine.py
src/daily_digest/renderers/: terminal.py
tests/: conftest.py  test_config.py  test_gitlab.py  test_redmine.py
