[project]
name = "daily-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
[tool.ruff]
line-length = 80
[tool.ruff.format]
quote-style = "single"
[tool.setuptools.packages.find]
where = ["src"]
[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
